# simcraft

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
.github/workflows/: deploy.yml  desktop-build-platform.yml  desktop-macos.yml  desktop-release.yml
backend/: Cargo.toml  main.py  requirements.txt  schemas.py
backend/core/: Cargo.toml
backend/core/src/: addon_parser.rs  game_data.rs  lib.rs  models.rs  profileset_generator.rs  result_parser.rs  server.rs
backend/core/src/storage/: memory.rs  mod.rs  sqlite.rs
backend/desktop/: Cargo.toml  tauri.conf.json
backend/desktop/src/: main.rs
backend/routers/: items.py  sim.py
backend/server/: Cargo.toml  Dockerfile
backend/server/src/: main.rs
backend/services/: addon_parser.py  game_data.py
data/: fetch-data.sh
desktop/: copy-frontend.js  generate-latest.js  main.js  package-lock.json  package.json  preload.js
desktop/scripts/: build-backend.js  copy-frontend.js  dev.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: server.rs  simc_runner.rs
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/components/: DesktopAppLink.tsx  SettingsPopover.tsx  SimForm.tsx  SimSharedConfig.tsx  SimStatus.tsx  SimTypeCards.tsx  (+5 more)
scripts/: kill-ports.js  sync-version.sh
web/: docker-compose.dev.yml  docker-compose.yml
web/backend/: models.py  schemas.py
web/backend/routers/: items.py  sim.py
web/backend/services/: game_data.py  simc.py
web/backend/worker/: tasks.py
(+18 files in other folders)
