[package]
name = "simhammer"
version.workspace = true
edition = "2021"

[dependencies]
simhammer-core = { path = "../core", features = ["desktop"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
